# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mea"
version = "0.0.1"

description = "Async Rust utilities that are runtime agnostic."
documentation = "https://docs.rs/mea"

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

# no_std impls for the internal sync primitives
sync-critical-section = ["dep:critical-section"]
sync-futex = ["dep:atomic-wait"]

[dependencies]
atomic-wait = { version = "1.1.0", optional = true }
critical-section = { version = "1.2.0", optional = true }

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
pollster = { version = "0.3.0" }
tokio = { version = "1.41.0", features = ["full"] }
