# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["tison <wander4096@gmail.com>"]
categories = ["async", "synchronization", "waitgroup", "concurrency", "no-std"]
description = """
A runtime-agnostic library providing essential synchronization primitives for asynchronous Rust programming.
Includes Barrier, Latch, Mutex, Semaphore, and WaitGroup implementations.
"""
documentation = "https://docs.rs/mea"
keywords = ["async", "concurrency", "synchronization", "waitgroup", "mutex"]
name = "mea"
readme = "README.md"
version = "0.0.5"

edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
slab = { version = "0.4.9", default-features = false }

[dev-dependencies]
pollster = { version = "0.4.0" }
tokio = { version = "1.41.0", features = ["full"] }
tokio-test = { version = "0.4.4" }

[features]
default = []
# Enable additional runtime-specific optimizations
tokio = []

[lints]
workspace = true

[package.metadata.playground]
features = ["tokio"]

[badges]
maintenance = { status = "actively-developed" }
