# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mea"
version = "0.1.2"

categories = ["asynchronous", "concurrency"]
description = "A runtime-agnostic library providing essential synchronization primitives for asynchronous Rust programming."
documentation = "https://docs.rs/mea"
keywords = ["async", "concurrency", "synchronization", "waitgroup", "mutex"]

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["channel", "combinators", "primitives"]

channel = ["primitives", "dep:futures-core", "dep:pin-project"]
combinators = ["dep:futures-core", "dep:pin-project"]
primitives = ["dep:slab"]

[dependencies]
futures-core = { version = "0.3.31", default-features = false, optional = true }
pin-project = { version = "1.1.7", optional = true }
slab = { version = "0.4.9", optional = true }

[dev-dependencies]
futures = { version = "0.3.31" }
pollster = { version = "0.4.0", features = ["macro"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-test = { version = "0.4.4" }

[lints]
workspace = true
